--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<p>Brewer Kight</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Sun!!!</title>
+  
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+
+  
+    <h1>Praise The Sun</h1>
+  <div id="banner">
+    
+    </div>
+  
+<article>
+  <div id="main" class="content">
+    <h3>Solaire of Astora</h3>
+    <span class="byline"></span>
+    <p id="Solaire">Solaire of Astora is a character who appears in Dark Souls. He is an exceptionally skilled warrior who purposefully became Undead so he could visit Lordran in his quest to find a sun of his own. He has become a fan favourite among the Dark Souls community due to his jovial attitude and memorable dialogue, and speculation previously lead some to believe he was Lord Gwyn's firstborn, the God of War who lost his deific status. Depending on the player's actions in Lost Izalith, Solaire will either be available for help as a summon against the final boss, or his descent into madness and despair will force the player to kill him.</p>
+
+    <h3>The meaning behind Praise the Sun</h3>
+    <p>The beauty of praising the sun is that it has no baked-in meaning. Waving and bowing and pointing all have obvious uses based on real-world application. Before putting the gesture into players&apos; hands, throwing your arms up in the air with your palms out while standing tiptoed could have meant anything, but it's a  unique gesture that only looks like a person preparing to swan dive or somehow take off flying.</p>
+
+    <p>Praising the sun was an opportunity for players to place their own meaning on the game world, rather than continue to excavate its vague item descriptions and cryptic cut scenes for scraps of information. In a series so bent on kicking the player while they're down, on dragging them through a broken record of humanity's greatest failures, it's a fun, hopeful gesture that rises to the top</p>
+    <p>So with Solaire as their inspiration, everyone came to a collective, gradual decision on the meaning of praising the sun. It would be a sign of joy, hope, and jolly cooperation.</p>
+    <div class="quote">
+        <h2>"If only I could be so grossly incandescent!""</h2>
+      </div>
+    
+</div>
+</article>
+  
+</body>
+<footer>Praise The Sun</footer>
+</html>   
